[gd_scene load_steps=5 format=3 uid="uid://3krnqae68h4d"]

[ext_resource type="Texture2D" uid="uid://c7wyw4y3jdl7j" path="res://assets/UI/NumberNew.png" id="1"]
[ext_resource type="Script" uid="uid://drj33i4nu3wo" path="res://src/Effect/DamageNumber.gd" id="2"]

[sub_resource type="Animation" id="1"]
resource_name = "FloatUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Layer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8), Vector2(0, -8), Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Layer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_085d2"]
_data = {
&"FloatUp": SubResource("1")
}

[node name="DamageNumber" type="Node2D"]
z_index = 5
z_as_relative = false
script = ExtResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_085d2")
}

[node name="Layer" type="Node2D" parent="."]

[node name="Sign" type="Sprite2D" parent="Layer"]
position = Vector2(-4, 0)
texture = ExtResource("1")
hframes = 11
vframes = 6
frame = 32

[node name="Num1" type="Sprite2D" parent="Layer"]
position = Vector2(5, 0)
texture = ExtResource("1")
hframes = 11
vframes = 6
frame = 31

[node name="Num2" type="Sprite2D" parent="Layer"]
position = Vector2(14, 0)
texture = ExtResource("1")
hframes = 11
vframes = 6
frame = 31

[node name="Num3" type="Sprite2D" parent="Layer"]
position = Vector2(23, 0)
texture = ExtResource("1")
hframes = 11
vframes = 6
frame = 31
